fixed h1 alignment

--- a/main.css
+++ b/main.css
@@ -76,7 +76,6 @@ article {
 }
 
 section > h1 {
-  float: right;
   background-color: rgba(255, 255, 255, 0.5);
   border-left: 5px solid black;
   border-radius: 0px 30px 30px 0px;
